# cache-simulator

./: .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Makefile  pyproject.toml
.github/workflows/: ci.yml  release.yml
cache_simulator/: __init__.py  mycode.py
docs/docs/: index.md
tests/: test_data.py
