[project]
name = "cache_simulator"
dynamic = ["version"]
description = "A simulator for processor caches"
license = "MIT"
authors = [{ name = "Pavel Kravchenya", email = "kpdphys@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "torch",
  "causal-conv1d",
  "mamba-ssm",
  "PyYAML",
  "dvc",
  "python-dotenv",
  "deepspeed",
  "mlflow",
  "mpi4py",
  "dagshub",
]

[tool.poetry]
version = "0.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylint = "*"
mypy = "*"
pytest = "*"
pytest-mock = "*"
python-semantic-release = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["cache_simulator"]
force_sort_within_sections = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.semantic_release]
version_source = "pyproject.toml"
tag_format = "v{version}"
branch = "main"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_types = ["feat", "fix", "chore", "ci"]
